[gd_scene load_steps=8 format=4 uid="uid://7ye1a0y705n1"]

[ext_resource type="Material" uid="uid://uecjrforgudi" path="res://assets/materials/room_wall_material.tres" id="1_bpmat"]
[ext_resource type="Script" uid="uid://y1w5475dtbwc" path="res://assets/models/industrial_light.gd" id="1_kxgdn"]
[ext_resource type="AudioStream" uid="uid://dn1pqxde63tbn" path="res://assets/sfxs/very-old-fluorecent-light-95811_industrial_light_sfx.mp3" id="2_iosie"]
[ext_resource type="Material" uid="uid://cwhan65ox72kh" path="res://assets/materials/industrial_light_material.tres" id="2_pu3bu"]

[sub_resource type="ArrayMesh" id="ArrayMesh_pu3bu"]
_surfaces = [{
"aabb": AABB(-0.1, -0.25, -0.25, 2.1999998, 0.5, 0.5),
"attribute_data": PackedByteArray("AACAPwAAAADNzEw/AAAAPwAAgD8AAAA/AACAPwAAAAAAAAA/AAAAAAAAAD/MzEw+AACAPwAAAAAAAAAAAAAAAM3MTD8AAAA/zcxMPwAAAD/MzEw+AACAP83MTD8AAIA/AACAP83MTD9mZmY/zMxMPmZmZj/NzEw/AACAPwAAAAAAAAA/zMxMPgAAgD8AAIA/AAAAP8zMTD4AAAAAzMxMPgAAgD8AAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/zcxMPwAAAD/MzEw+AAAAP8zMTD4AAIA/AACAP83MTD8AAIA/zMxMPmZmZj/MzEw+zcxMPwAAAD8AAAAAAAAAAMzMTD4AAAA/zMxMPgAAAD8AAAAAAAAAAAAAAAAAAAA/AACAPwAAgD8AAAA/zcxMPwAAAD8AAIA/AAAAP83MTD8AAAAAAAAAPwAAAADNzEw/AACAPwAAgD8AAAAAAAAAAAAAAD/NzEw/AAAAAMzMTD4AAAAAAAAAPwAAgD8AAIA/AAAAAAAAgD8AAIA/AACAPwAAAAAAAAA/AAAAAAAAgD8AAAA/AACAPwAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AAAAAAAAAAAAAAA/AACAPwAAAD8AAAAAAAAAP83MTD8AAAAAAAAAAAAAAAAAAAA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AACAPwUAAD/NzEw/BQAAPwAAgD8AAIA/9v//PgAAAAAAAAAAAAAAAPb//z7MzEw+AACAPwAAgD/NzEw/BQAAP8zMTD4FAAA/AACAP8zMTD5mZmY/zMxMPgAAgD/NzEw/zcxMPwAAAADMzEw+BQAAP83MTD8FAAA/9v//PszMTD4AAIA/AAAAPwAAgD/MzEw+AAAAAAAAAAAAAIA/AACAP/b//z7MzEw+zcxMPwAAAADMzEw+AAAAAMzMTD4FAAA/AACAP83MTD9mZmY/zMxMPmZmZj/NzEw/AACAPwAAgD/MzEw+BQAAPwAAAAAAAIA/zMxMPgUAAD8AAAAABQAAPwAAAAAAAIA/9v//PgAAgD/2//8+zcxMPwAAAAAAAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAAAAAAAAgD/2//8+zcxMPwAAAAAAAAAAAACAP83MTD8AAAAAAAAAAPb//z7NzEw/AACAPwAAAD/2//8+zMxMPgAAgD8AAIA/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AAAAAAAAAAAAAAA/AACAPwAAAD8AAAAAAACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AACAPwAAgD8AAIA/AAAAAAAAAAAAAAAAAACAP83MTD8AAIA/AAAAPwAAAAAAAAAAAAAAAAAAAAAAAAAAAACAPwAAAD8AAIA/AACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAAA/MzNzP///fz7QzEw9//9/PjMzcz8AAIA/zcxMP83MTD3MzEw+zcxMPczMTD4zM3M/MzNzPwAAQD8zM3M/AAAAANDMTD0AAAAAAACAPzMzcz8AAAAA0MxMPQAAAAAzM3M/zMxMPjMzcz/NzEw/MzNzP83MTD/NzEw90MxMPf//fz7QzEw9AACAPzMzcz8AAIA/MzNzPwAAQD/QzEw9AAAAANDMTD0AAEA/AAAAANDMTD0AAIA/MzNzPwAAgD/QzEw9AACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/AACAPwAAAAAAAAAAAAAAAAAAgD8AAIA/AAAAAAAAAAAAAAAAzcxMPQAAgD8AAIA/MzNzPwAAgD8zM3M/AAAAP9DMTD0AAIA/AACAPwAAgD8AAAAAAAAAADMzcz8AAIA/AAAAAM3MTD0AAAAAMzNzPwAAgD8AAIA/0MxMPQAAgD8zM3M/AAAAP9DMTD0AAAA/MzNzPwAAgD8AAAAAAAAAANDMTD0AAIA/AACAPwAAgD8AAAAAMzNzPwAAAAAAAIA/AAAAAAAAAAAAAAAAAACAP9DMTD0AAIA/AACAPwAAAAAAAAAAAAAAAAAAgD/NzEw9AACAPwAAgD8AAIA/AAAAADMzcz8AAAAAAACAP83MTD0AAAAAAAAAAAAAgD8zM3M/MzNzPwAAAADQzEw9AAAAPzMzcz8AAAA/AACAPwAAgD8zM3M/AAAAANDMTD0AAAAAMzNzPwAAAADQzEw9AAAAANDMTD0AAAA/AAAAAAAAAAAAAIA/AACAPwAAgD8zM3M/AAAAAAAAAAAAAAAAAACAPwAAgD8AAIA/AACAPwAAgD8AAAAAAAAAAAAAAAAAAIA/AACAPwAAgD/QzEw9AAAAAAAAAAAAAAAA"),
"format": 34359738391,
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 228,
"vertex_data": PackedByteArray("zczMvQAAgL4AAIC+AAAAAAAAgL6amRm+AAAAAAAAgL4AAIC+zczMvQAAgL4AAIC+AAAAAAAAgL4AAIC+AAAAAJqZGb4AAIC+zczMvQAAgL4AAIC+zczMvQAAgL4AAIA+AAAAAAAAgL6amRm+AAAAAAAAgL6amRm+zczMPQAAgL6amRk+zczMPQAAgL6amRm+zczMPQAAgL6amRm+zczMPc3MTL6amRk+zczMPc3MTL6amRm+zczMvQAAgL4AAIC+AAAAAJqZGb4AAIC+zczMvQAAgD4AAIC+AAAAAJqZGb4AAIC+zczMPZqZGb4AAIC+zczMvQAAgD4AAIC+zczMvQAAgL4AAIC+zczMvQAAgD4AAIC+zczMvQAAgL4AAIA+AAAAAAAAgL6amRm+AAAAAAAAgL6amRk+zczMPQAAgL6amRk+zczMPQAAgL6amRm+zczMPQAAgL6amRk+zczMPc3MTL6amRk+AAAAAAAAgL6amRm+zczMvQAAgL4AAIA+AAAAAAAAgL6amRk+AAAAAAAAgL6amRk+zczMvQAAgL4AAIA+AAAAAAAAgL4AAIA+zczMvQAAgL4AAIA+AAAAAJqZGb4AAIA+AAAAAAAAgL4AAIA+AAAAAJqZGb4AAIA+zczMPQAAAAAAAIA+zczMPZqZGb4AAIA+zczMvQAAgL4AAIA+zczMPQAAgD4AAIA+AAAAAJqZGb4AAIA+zczMPZqZGb4AAIC+zczMPQAAAAAAAIC+zczMvQAAgD4AAIC+zczMPQAAgD4AAIC+zczMvQAAgD4AAIC+zczMPQAAAAAAAIC+zczMPQAAgD4AAIC+zczMPQAAAAAAAIC+zczMPQAAgD4AAIA+zczMvQAAgD4AAIC+zczMPQAAgD4AAIC+zczMPQAAgD4AAIA+zczMvQAAgL4AAIA+zczMvQAAgD4AAIC+zczMvQAAgD4AAIA+zczMPQAAgD4AAIA+zczMPQAAAAAAAIC+zczMPQAAAAAAAIA+AAAAAJqZGb4AAIA+zczMPQAAgD4AAIA+zczMPQAAAAAAAIA+zczMvQAAgL4AAIA+zczMvQAAgD4AAIA+zczMPQAAgD4AAIA+zczMvQAAgD4AAIC+zczMPQAAgD4AAIA+zczMvQAAgD4AAIA+AAAAQAAAgL4AAIC+AAAAQAAAgL6amRm+ZmYGQAAAgL4AAIC+AAAAQAAAgL4AAIC+ZmYGQAAAgL4AAIC+AAAAQJqZGb4AAIC+ZmYGQAAAgL4AAIC+AAAAQAAAgL6amRm+AAAAQAAAgL6amRk+MzPzPwAAgL6amRm+MzPzP83MTL6amRm+MzPzPwAAgL6amRk+MzPzPwAAgL6amRm+AAAAQAAAgL6amRk+AAAAQAAAgL6amRm+AAAAQJqZGb4AAIC+MzPzPwAAAAAAAIC+MzPzP5qZGb4AAIC+ZmYGQAAAgL4AAIC+MzPzPwAAgD4AAIC+AAAAQJqZGb4AAIC+MzPzPwAAgL6amRm+MzPzPwAAgL6amRk+AAAAQAAAgL6amRk+MzPzPwAAgL6amRk+MzPzP83MTL6amRm+MzPzP83MTL6amRk+ZmYGQAAAgL4AAIC+AAAAQAAAgL6amRk+ZmYGQAAAgL4AAIA+AAAAQAAAgL6amRk+AAAAQAAAgL4AAIA+ZmYGQAAAgL4AAIA+AAAAQAAAgL4AAIA+AAAAQJqZGb4AAIA+ZmYGQAAAgL4AAIA+ZmYGQAAAgL4AAIC+ZmYGQAAAgL4AAIA+ZmYGQAAAgD4AAIA+ZmYGQAAAgL4AAIA+AAAAQJqZGb4AAIA+ZmYGQAAAgD4AAIA+MzPzP5qZGb4AAIA+ZmYGQAAAgD4AAIA+AAAAQJqZGb4AAIA+MzPzPwAAAAAAAIC+AAAAQJqZGb4AAIC+MzPzPwAAgD4AAIC+ZmYGQAAAgL4AAIC+ZmYGQAAAgD4AAIC+MzPzPwAAgD4AAIC+MzPzPwAAgD4AAIC+MzPzPwAAAAAAAIA+MzPzPwAAAAAAAIC+ZmYGQAAAgL4AAIC+ZmYGQAAAgD4AAIA+ZmYGQAAAgD4AAIC+MzPzPwAAgD4AAIC+ZmYGQAAAgD4AAIC+ZmYGQAAAgD4AAIA+MzPzP5qZGb4AAIA+MzPzPwAAAAAAAIA+ZmYGQAAAgD4AAIA+MzPzPwAAgD4AAIC+MzPzPwAAgD4AAIA+MzPzPwAAAAAAAIA+MzPzPwAAgD4AAIC+ZmYGQAAAgD4AAIA+MzPzPwAAgD4AAIA+MzPzPwAAgD4AAIA+ZmYGQAAAgD4AAIA+MzPzPwAAAAAAAIA+zczMPZqZGb4AAIC+MzPzP5qZGb4AAIC+zczMPQAAAAAAAIC+zczMPc3MTL6amRm+zczMPc3MTL6amRk+MzPzP83MTL6amRk+zczMPZqZGb4AAIA+zczMPQAAAAAAAIA+MzPzPwAAAAAAAIA+zczMPQAAAAAAAIC+MzPzPwAAAAAAAIA+zczMPQAAAAAAAIA+MzPzP83MTL6amRk+MzPzP83MTL6amRm+zczMPc3MTL6amRm+MzPzP5qZGb4AAIC+MzPzPwAAAAAAAIC+zczMPQAAAAAAAIC+zczMPZqZGb4AAIA+MzPzPwAAAAAAAIA+MzPzP5qZGb4AAIA+MzPzPwAAAAAAAIA+zczMPQAAAAAAAIC+MzPzPwAAAAAAAIC+AAAAAAAAgL4AAIC+AAAAAAAAgL6amRm+AAAAQAAAgL4AAIC+AAAAAAAAgL4AAIC+AAAAQAAAgL4AAIC+AAAAAJqZGb4AAIC+AAAAAAAAgL6amRm+zczMPQAAgL6amRm+AAAAQAAAgL4AAIC+zczMPQAAgL6amRm+zczMPc3MTL6amRm+MzPzPwAAgL6amRm+AAAAAJqZGb4AAIC+AAAAQAAAgL4AAIC+zczMPZqZGb4AAIC+zczMPQAAgL6amRm+MzPzPwAAgL6amRm+AAAAQAAAgL4AAIC+MzPzPwAAgL6amRm+zczMPc3MTL6amRm+MzPzP83MTL6amRm+zczMPZqZGb4AAIC+AAAAQAAAgL4AAIC+MzPzP5qZGb4AAIC+AAAAQAAAgL4AAIC+MzPzPwAAgL6amRm+AAAAQAAAgL6amRm+AAAAQAAAgL4AAIC+AAAAQJqZGb4AAIC+MzPzP5qZGb4AAIC+AAAAAAAAgL6amRk+AAAAAAAAgL4AAIA+zczMPQAAgL6amRk+AAAAAAAAgL4AAIA+AAAAAJqZGb4AAIA+zczMPZqZGb4AAIA+zczMPQAAgL6amRk+AAAAAAAAgL4AAIA+MzPzPwAAgL6amRk+zczMPQAAgL6amRk+MzPzP83MTL6amRk+zczMPc3MTL6amRk+AAAAAAAAgL4AAIA+zczMPZqZGb4AAIA+MzPzP5qZGb4AAIA+zczMPQAAgL6amRk+MzPzPwAAgL6amRk+MzPzP83MTL6amRk+AAAAAAAAgL4AAIA+AAAAQAAAgL6amRk+MzPzPwAAgL6amRk+AAAAAAAAgL4AAIA+AAAAQAAAgL4AAIA+AAAAQAAAgL6amRk+AAAAAAAAgL4AAIA+AAAAQJqZGb4AAIA+AAAAQAAAgL4AAIA+AAAAAAAAgL4AAIA+MzPzP5qZGb4AAIA+AAAAQJqZGb4AAIA+/38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA////f/9//n////9//3/+f////3//f/5//////wAA/z//////AAD/P/////8AAP8//////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA////f/9//n////9//3/+f////3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//////wAA/z//////AAD/P/////8AAP8/////f/9//n////9//3/+f////3//f/5//3//////AAD/f/////8AAP9//////wAAAAD/f/9//n8AAP9//3/+fwAA/3//f/5/////f/9//n////9//3/+f////3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAAAAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAAAAD/f/9//n8AAP9//3/+fwAA/3//f/5//38AAP//AAD/fwAA//8AAP9/AAD//wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/////f/9//n////9//3/+f////3//f/5//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//////wAA/z//////AAD/P/////8AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5/////f/9//n////9//3/+f////3//f/5//3//////AAD/f/////8AAP9//////wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8/AAD/f/9//n8AAP9//3/+fwAA/3//f/5//3//////AAD/f/////8AAP9//////wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//3//////AAD/f/////8AAP9//////wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/////wAA/z//////AAD/P/////8AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8//////wAA/z//////AAD/P/////8AAP8//38AAP//AAD/fwAA//8AAP9/AAD//wAA/38AAP//AAD/fwAA//8AAP9/AAD//wAA/3//fwAA/z//f/9/AAD/P/9//38AAP8//3//fwAA/z//f/9/AAD/P/9//38AAP8/")
}]

[sub_resource type="BoxMesh" id="BoxMesh_4xlux"]
size = Vector3(1.8, 0.1, 0.3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kxgdn"]
albedo_color = Color(0, 0, 0, 1)
emission = Color(0.44752336, 0.4475239, 0, 1)

[node name="IndustrialLight" type="Node3D"]
script = ExtResource("1_kxgdn")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
visible = false

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
size = Vector3(0.2, 0.5, 0.5)

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)
size = Vector3(0.2, 0.5, 0.5)

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.1, 0)
size = Vector3(2, 0.2, 0.5)

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.2, -0.2)
size = Vector3(2, 0.1, 0.1)

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.2, 0.2)
size = Vector3(2, 0.1, 0.1)

[node name="CSGBakedMeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("ArrayMesh_pu3bu")
surface_material_override/0 = ExtResource("1_bpmat")

[node name="LightMeshInstance" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.18, 0)
mesh = SubResource("BoxMesh_4xlux")
skeleton = NodePath("../CSGCombiner3D")
surface_material_override/0 = ExtResource("2_pu3bu")

[node name="LightMeshInstance2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.2, 0)
visible = false
mesh = SubResource("BoxMesh_4xlux")
skeleton = NodePath("../CSGCombiner3D")
surface_material_override/0 = SubResource("StandardMaterial3D_kxgdn")

[node name="SpotLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 1, -0.3, 0)
light_color = Color(1, 1, 0, 1)
light_energy = 8.0
light_bake_mode = 1
spot_range = 25.0
spot_attenuation = 2.0
spot_angle = 50.0
spot_angle_attenuation = 2.0

[node name="SFXAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 1, -0.3, 0)
stream = ExtResource("2_iosie")
max_db = 6.0
emission_angle_enabled = true
emission_angle_filter_attenuation_db = 0.0
